// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XAxis When XAxis is rendered above the chart it renders consistently with default tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="10%"
      y2="10%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="10%"
          x2="10%"
          y1="10%"
          y2="7.5%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="10%"
          y="7.5%"
        >
          1
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="50%"
          x2="50%"
          y1="10%"
          y2="7.5%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="50%"
          y="7.5%"
        >
          2
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="10%"
          y2="7.5%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="90%"
          y="7.5%"
        >
          3
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis is rendered above the chart it renders consistently with explicit bucket tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="10%"
      y2="10%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="36.666666666666664%"
          x2="36.666666666666664%"
          y1="10%"
          y2="7.5%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="23.333333333333332%"
          y="7.5%"
        >
          1
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="66.66666666666667%"
          x2="66.66666666666667%"
          y1="10%"
          y2="7.5%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="53.33333333333334%"
          y="7.5%"
        >
          2
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="96.66666666666669%"
          x2="96.66666666666669%"
          y1="10%"
          y2="7.5%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="83.33333333333334%"
          y="7.5%"
        >
          3
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis is rendered above the chart it renders consistently with explicit inline tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="10%"
      y2="10%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="10%"
          x2="10%"
          y1="10%"
          y2="7.5%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="10%"
          y="7.5%"
        >
          1
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="50%"
          x2="50%"
          y1="10%"
          y2="7.5%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="50%"
          y="7.5%"
        >
          2
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="10%"
          y2="7.5%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="90%"
          y="7.5%"
        >
          3
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values are all negative it renders consistently with default tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="130%"
      y2="130%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="10%"
          x2="10%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="10%"
          y="135%"
        >
          -3
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="50%"
          x2="50%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="50%"
          y="135%"
        >
          -2
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="90%"
          y="135%"
        >
          -1
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values are all negative it renders consistently with explicit bucket tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="130%"
      y2="130%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="36.666666666666664%"
          x2="36.666666666666664%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="23.33333333333334%"
          y="135%"
        >
          -3
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="66.66666666666667%"
          x2="66.66666666666667%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="53.33333333333334%"
          y="135%"
        >
          -2
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="96.66666666666669%"
          x2="96.66666666666669%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="83.33333333333334%"
          y="135%"
        >
          -1
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values are all negative it renders consistently with explicit inline tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="130%"
      y2="130%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="10%"
          x2="10%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="10%"
          y="135%"
        >
          -3
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="50%"
          x2="50%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="50%"
          y="135%"
        >
          -2
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="90%"
          y="135%"
        >
          -1
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values are all positive it renders consistently with default tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="130%"
      y2="130%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="10%"
          x2="10%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="10%"
          y="135%"
        >
          0
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="50%"
          x2="50%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="50%"
          y="135%"
        >
          1
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="90%"
          y="135%"
        >
          2
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values are all positive it renders consistently with explicit bucket tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="130%"
      y2="130%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="36.666666666666664%"
          x2="36.666666666666664%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="23.333333333333332%"
          y="135%"
        >
          0
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="66.66666666666667%"
          x2="66.66666666666667%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="53.33333333333334%"
          y="135%"
        >
          1
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="96.66666666666669%"
          x2="96.66666666666669%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="83.33333333333334%"
          y="135%"
        >
          2
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values are all positive it renders consistently with explicit inline tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="130%"
      y2="130%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="10%"
          x2="10%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="10%"
          y="135%"
        >
          0
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="50%"
          x2="50%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="50%"
          y="135%"
        >
          1
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="90%"
          y="135%"
        >
          2
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values span negative and positive values it renders consistently with default tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="130%"
      y2="130%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="10%"
          x2="10%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="10%"
          y="135%"
        >
          -2
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="30%"
          x2="30%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="30%"
          y="135%"
        >
          -1
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="90%"
          y="135%"
        >
          2
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values span negative and positive values it renders consistently with explicit bucket tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="130%"
      y2="130%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="36.666666666666664%"
          x2="36.666666666666664%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="23.333333333333332%"
          y="135%"
        >
          -2
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="51.66666666666667%"
          x2="51.66666666666667%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="38.333333333333336%"
          y="135%"
        >
          -1
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="96.66666666666669%"
          x2="96.66666666666669%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="83.33333333333334%"
          y="135%"
        >
          2
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values span negative and positive values it renders consistently with explicit inline tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="130%"
      y2="130%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="10%"
          x2="10%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="10%"
          y="135%"
        >
          -2
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="30%"
          x2="30%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="30%"
          y="135%"
        >
          -1
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="130%"
          y2="135%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="90%"
          y="135%"
        >
          2
        </text>
      </g>
    </g>
  </svg>
</div>
`;
